style: fix dark mode buttons

--- a/Project Website/dev/scss/style.scss
+++ b/Project Website/dev/scss/style.scss
@@ -216,22 +216,6 @@ a.button {
 			background-color: var(--color-black);
 			transition: border-color 0.2s, background-color 0.2s;
 		}
-
-		@media (prefers-color-scheme: dark) {
-			&:disabled {
-				background-color: var(--grey-200);
-				color: var(--color-body-bg);
-
-				& :global(svg) {
-					fill: var(--color-body-bg);
-				}
-			}
-
-			&:active:not(:disabled),
-			&:hover:not(:disabled) {
-				transition: border-color 0.2s, background-color 0.2s;
-			}
-		}
 	}
 
 	&.secondary {
@@ -255,30 +239,6 @@ a.button {
 		&:hover:not(:disabled) {
 			background-color: var(--grey-150);
 			transition: border-color 0.2s, background-color 0.2s;
-		}
-
-		@media (prefers-color-scheme: dark) {
-			background-color: var(--color-body-bg);
-			border-color: var(--color-body-text);
-			color: var(--color-body-text);
-
-			& :global(svg) {
-				fill: var(--color-body-text);
-			}
-
-			&:disabled {
-				background-color: var(--color-body-bg);
-				color: var(--grey-500);
-
-				& :global(svg) {
-					fill: var(--grey-500);
-				}
-			}
-
-			&:active:not(:disabled),
-			&:hover:not(:disabled) {
-				transition: border-color 0.2s, background-color 0.2s;
-			}
 		}
 	}
 }
